--- a/bot/package.json
+++ b/bot/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "cyberstars-discord-bot",
+  "name": "discord-bot",
   "version": "1.0.0",
-  "type": "module",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node bot/server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.0.3",
+    "discord.js": "^14.0.3"
   }
 }
