--- a/bot/package.json
+++ b/bot/package.json
@@ -1,15 +1,15 @@
 {
   "name": "discord-bot",
   "version": "1.0.0",
-  "main": "server.js",
+  "private": true,
   "type": "module",
   "scripts": {
-    "start": "node bot/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "discord.js": "^14.0.3"
+    "discord.js": "^14.19.3",
+    "dotenv": "^16.4.5",
+    "express": "^5.1.0"
   }
 }
