--- a/bot/package.json
+++ b/bot/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "engines": { "node": ">=20" },
   "scripts": {
     "start": "node server.js"
   },
@@ -10,6 +11,6 @@
     "cors": "^2.8.5",
     "discord.js": "^14.19.3",
     "dotenv": "^16.4.5",
-    "express": "^5.1.0"
+    "express": "^4.19.2"
   }
 }
