--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+   "push-homepage": "bash scripts/push-homepage.sh",
+  "push-homepage:deploy": "bash scripts/push-homepage.sh --merge"
   },
   "dependencies": {
     "cookie-session": "^2.1.0",
